# any-palette

./: CLAUDE.md  Cargo.toml  README.md  build.rs
assets/: auto-pallet-guide.md
src/: main.rs
