[package]
name = "any-palette"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image", "all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png", "bmp", "gif", "webp"] }
auto-palette = { version = "0.9.2", features = ["image"] }
rfd = "0.15"
arboard = "3"

[profile.release]
opt-level = 3
lto = "thin"
